media/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  # replicas: 1 #Defaults to 1, this lets me change it to 0 without flux reseting it back to 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:1.12.3.4973-215c28d86
          livenessProbe:
            httpGet:
              path: /identity
              port: plex
          readinessProbe:
            httpGet:
              path: /identity
              port: plex
          ports:
            - containerPort: 32400
              hostPort: 31893
              name: plex
          resources:
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
          - mountPath: /config
            name: config
            subPath: plex
          - mountPath: /transcode
            name: tmp-storage
          - mountPath: /tmp
            name: tmp-storage
          - mountPath: /mnt/movies
            name: movies
          - mountPath: /mnt/kids/tv
            name: kids-tv
          - mountPath: /mnt/tv
            name: tv
        - name: tautulli
          image: "linuxserver/tautulli:123"
          ports:
            - containerPort: 8181
              name: tautulli
          volumeMounts:
            - mountPath: /config
              name: config
              subPath: plexpy
            - mountPath: /logs
              mountPropagation: HostToContainer
              name: config
              subPath: plex/Library/Application Support/Plex Media Server/Logs
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: tautulli
          readinessProbe:
            httpGet:
              path: /
              port: tautulli
      volumes:
        - name: config
          iscsi:
            iqn: iqn.2016-01.io.n10:vault01.appdata-plex.cdab998267
            targetPortal: 172.20.1.5
            lun: 0
        - name: tmp-storage
          emptyDir: {}
        - name: movies
          persistentVolumeClaim:
            claimName: media-movies
        - name: kids-tv
          persistentVolumeClaim:
            claimName: media-kids-tv
        - name: tv
          persistentVolumeClaim:
            claimName: media-tv
