media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: plex
      port: 32400
      protocol: TCP
  selector:
    app: plex

---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: tautulli
      port: 80
      protocol: TCP
  selector:
    app: plex
