media/plex/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
  labels:
    app: tautulli
    component: frontend
  name: tautulli
  namespace: media
spec:
  rules:
  - host: tautulli.n10.io
    http:
      paths:
      - backend:
          serviceName: tautulli
          servicePort: http
        path: /
  tls:
  - hosts:
    - tautulli.n10.io
    secretName: tautulli-tls
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: tautulli
    component: oauth2-proxy
  name: tautulli-oauth2-proxy
  namespace: media
spec:
  rules:
  - host: tautulli.n10.io
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 80
        path: /oauth2
  tls:
  - hosts:
    - tautulli.n10.io
    secretName: tautulli-tls
