media/plex/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: plex
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: nginx-ingress-prod
    ports:
    - protocol: TCP
      port: 8181
    - protocol: TCP
      port: 80
  - from: []
    ports:
    - protocol: TCP
      port: 32400
